--- a/scr/style.css
+++ b/scr/style.css
@@ -2,31 +2,45 @@ body{
 background-color:#E1D7CD;
 }
 .full-page{
-    background-color: rgb(229, 224, 219);
+    background-color: rgb(185, 151, 116);
     margin-bottom: 1000px;
 
 }
 h1{
+    position: relative;
+    display: inline-block;
     display: flex;
-    justify-content: center;
-    text-align: left;
+   justify-content: center;
     margin-top: 50px;
   font-family: "Quintessential", serif;
-  font-weight: 400;
+  font-weight: 600;
   font-style: normal;
+  size: 200px;
 }
 
 
 h2{
+    position: relative;
+    display: inline-block;
     display: flex;
   justify-content: center;
     text-align: center;
     margin-top: 10px;
+    size: 50px;
 }
-.links{
-    background-color: #E1D7CD;
-    display: flex;
+
+
+
+p{
     justify-content: center;
+    display: inline-block;
     text-align: center;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
+
+ .container{
+    width: 390px;
+    height: 293px;
+    position:absolute;
+ }
