--- a/scr/style.css
+++ b/scr/style.css
@@ -53,7 +53,9 @@ p{
 }
 
  .container{
-    width: 390px;
-    height: 293px;
+  display: flex;
+  gap: 50px;
+    width: 1000px;
+    height: 600px;
     position:absolute;
  }
