--- a/scr/style.css
+++ b/scr/style.css
@@ -1,5 +1,9 @@
 body{
 background-color:#E1D7CD;
+ 
+ 
+
+
 }
 .full-page{
     background-color: rgb(185, 151, 116);
@@ -53,9 +57,10 @@ p{
 }
 
  .container{
-  display: flex;
+  justify-content: center;
+margin-top: 50px;
   gap: 50px;
-    width: 1000px;
+    width: 300px;
     height: 600px;
     position:absolute;
  }
