--- a/scr/style.css
+++ b/scr/style.css
@@ -48,19 +48,21 @@ h3{
   size: 200px;
 }
 
-p{
-    justify-content: center;
-    display: inline-block;
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
+
+
 
  .container{
-  justify-content: center;
+  display:flex;
+  align-items:flex-start;
+  gap: 70px;
 margin-top: 50px;
   gap: 50px;
     width: 300px;
     height: 600px;
     position:absolute;
  }
+ .about-me{
+  display: flex;
+  margin-top: 50PX;
+
+}
